--- a/index.html
+++ b/index.html
@@ -23,33 +23,33 @@
     <div class="card">
       <h2>Group member</h2>
       <h5>Debet date,July 22, 2022</h5>
-      <div class="fakeimg" style="height:200px;"></div>
+      <div class="fakeimg" style="height:200px;">only four members in the team.</div>
+      <p>they all very young...</p>
       <p></p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     </div>
     <div class="card">
       <h2>The Album</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <h5></h5>
+      <div class="fakeimg" style="height:200px;">《New Jeans》、《OMG》、《Ditto》、《Attenton》、《Hurt》、《Hype boy》 in 2022.</div>
+      <p></p>
+      <p>all songs are popular.</p>
     </div>
   </div>
   <div class="rightcolumn">
     <div class="card">
       <h2>About Them</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <div class="fakeimg" style="height:250px;"><img src="img/NewJeans.jpg" ></div>
+      <p></p>
     </div>
     <div class="card">
       <h3>Popular Post</h3>
-      <div class="fakeimg"><p>Image</p></div>
-      <div class="fakeimg"><p>Image</p></div>
-      <div class="fakeimg"><p>Image</p></div>
+      <div class="fakeimg"><p>《New Jeans》</p></div>
+      <div class="fakeimg"><p>《OMG》</p></div>
+      <div class="fakeimg"><p>《Ditto》</p></div>
     </div>
     <div class="card">
       <h3>Follow Me</h3>
-      <p>Some text..</p>
+      <p>instergram:newjeans_official</p>
     </div>
   </div>
 </div>
